--- a/GraniteHouse/Areas/Admin/Views/ProductTypes/Index.cshtml
+++ b/GraniteHouse/Areas/Admin/Views/ProductTypes/Index.cshtml
@@ -22,9 +22,8 @@
             <th>
                 @Html.DisplayNameFor(m=>m.Name)
             </th>
-            <th>
-
-            </th>
+            <th></th>
+            <th></th>
         </tr>
 
         @foreach (var item in Model)
@@ -34,7 +33,7 @@
                     @Html.DisplayFor(m=>item.Name)
                 </td>
                 <td>
-                    EDIT | DELETE | UPDATE
+                    <partial name="_TableButtonPartial" model="item.Id" />
                 </td>
             </tr>
         }
